# barcode_reader_project

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  main.cpp  scan_main.cpp
.github/workflows/: build.yml
